<?xml version="1.0" encoding="utf-8"?>


<resources>
    <string name="contestant_name">الاسم</string>
    <string name="first_question">1- الالتزام بالشريعة في مصرف أبو ظبي الإسلامي يعد التزاماً .....</string>
    <string name="second_question">2- الاستثمار في أذون الخزانة ...</string>
    <string name="third_question">3- أجرة الخدمات المصرفية كإصدار الشيكات، يجوز أن تكون ....</string>
    <string name="fourth_question">4- يكيف الحساب الجاري على أنه عقد ....</string>
    <string name="fifth_question">5- يلتزم البائع بإخبار المشتري عن أصل تكلفة الشراء والربخ في بيع المرابحة لأنه من بيوع .....</string>
    <string name="app_name">مسابقة على الأصول</string>
    <string name="score">النتيجة</string>

</resources>
