<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_gravity="end"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context="com.example.android.shariadeparmentcompetition.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contestant_name"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/first_question" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingStart="24dp">

            <CheckBox
                android:id="@+id/q1check_a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="أ- رقابياً"
                android:textDirection="rtl" />

            <CheckBox
                android:id="@+id/q1check_b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ب- شرعياً"
                android:textDirection="rtl" />

            <CheckBox
                android:id="@+id/q1check_c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ج- قانونياً"
                android:textDirection="rtl" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/second_question"
            android:textDirection="rtl" />


        >

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingStart="24dp"
            android:paddingLeft="24dp"
            >

            <RadioButton
                android:id="@+id/q2_a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="أ- حلال"
                android:textDirection="rtl" />

            <RadioButton
                android:id="@+id/q2_b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ب- حرام"
                android:textDirection="rtl" />

            <RadioButton
                android:id="@+id/q2_c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ج- مكروه"
                android:textDirection="rtl" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/third_question"
            android:textDirection="rtl" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingStart="24dp">

            <CheckBox
                android:id="@+id/q3_a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="أ- مبلغاً مقطوعاً"
                android:textDirection="rtl" />

            <CheckBox
                android:id="@+id/q3_b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ب- نسبة مئوية"
                android:textDirection="rtl" />

            <CheckBox
                android:id="@+id/q3_c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ج- لا شيء مما ذكر"
                android:textDirection="rtl" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/fourth_question"
            android:textDirection="rtl" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingStart="24dp">

            <RadioButton
                android:id="@+id/q4_a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="أ- قرض حسن"
                android:textDirection="rtl" />

            <RadioButton
                android:id="@+id/q4_b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ب- مضاربة"
                android:textDirection="rtl" />

            <RadioButton
                android:id="@+id/q4_c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ج- قرض بفائدة"
                android:textDirection="rtl" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/fifth_question"
            android:textDirection="rtl" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingStart="24dp">

            <RadioButton
                android:id="@+id/q5_a"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="أ- المساومة"
                android:textDirection="rtl" />

            <RadioButton
                android:id="@+id/q5_b"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ب- المزايدة"
                android:textDirection="rtl" />

            <RadioButton
                android:id="@+id/q5_c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ج- الأمانة"
                android:textDirection="rtl" />

        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:onClick="scoreUpdate"
            android:text="@string/score" />

        <TextView
            android:id="@+id/scoreFinal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</ScrollView>
